# logger

./: .gitmodules  CMakeLists.txt  README.md
android/: .gitignore  build.gradle  build.gradle.kts  gradle.properties  publish.sh  settings.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
android/app/src/androidTest/java/seker/log/android/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/seker/logger/android/: Application.kt  MainActivity.kt  MyLogFileCallback.kt
android/app/src/main/kotlin/seker/logger/android/ui/main/: MainFragment.kt  MainViewModel.kt
android/app/src/test/java/seker/log/android/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/logger/: build.gradle  build.gradle.kts  publish.gradle
android/logger/src/androidTest/java/seker/logger/: ExampleInstrumentedTest.kt
android/logger/src/main/cpp/: CMakeLists.txt
android/logger/src/main/cpp/logger_jni/: CMakeLists.txt
android/logger/src/main/cpp/logger_jni/include/: attached_env.h
android/logger/src/main/cpp/logger_jni/src/: JniOnLoad.cpp  attached_env.cpp
android/logger/src/main/kotlin/seker/logger/: Log.kt  LogFileCallback.kt  LogFileHandler.kt  LogJni.kt
android/logger/src/test/java/seker/logger/: ExampleUnitTest.kt
logger/: CMakeLists.txt
logger/include/: defs.h  logger.h
logger/src/: logger.cpp  priority.h
