CMAKE_MINIMUM_REQUIRED(VERSION 3.5.0)
PROJECT(logger)

SET(CMAKE_CXX_STANDARD 11)

MESSAGE(STATUS "'${PROJECT_NAME}' include_dir: ${PATH_SPDLOG}/include")
INCLUDE_DIRECTORIES(${PATH_SPDLOG}/include include)

FILE(GLOB_RECURSE DIR_SPDLOG "${PATH_SPDLOG}/include/**")
FILE(GLOB DIR_INCLUDE "include/*.h")
AUX_SOURCE_DIRECTORY(src DIR_SRC)

#MESSAGE(STATUS "DIR_SPDLOG  : ${DIR_SPDLOG}")
#MESSAGE(STATUS "DIR_INCLUDE : ${DIR_INCLUDE}")
#MESSAGE(STATUS "DIR_SRC     : ${DIR_SRC}")

SOURCE_GROUP(TREE ${PATH_SPDLOG}/include FILES ${DIR_SPDLOG})
SOURCE_GROUP("include" FILES ${DIR_INCLUDE})
SOURCE_GROUP("src" FILES ${DIR_SRC})

ADD_LIBRARY(${PROJECT_NAME} SHARED ${DIR_SPDLOG} ${DIR_INCLUDE} ${DIR_SRC})

#TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE spdlog::spdlog_header_only)